# polymorphic_variant

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  pr-checks.yml
benchmarks/: CMakeLists.txt  benchmark_classes.hpp  benchmarks.cpp  initializer.cpp  initializer.hpp
cmake/: compiler.cmake  dependencies.cmake  polymorphic_variant-config.cmake.in  variant_uses_shared_storage.cmake
cmake/snippets/: check_variant_uses_shared_storage.cpp
include/pv/: free_functions.hpp  polymorphic_variant.hpp  pv.hpp
include/pv/details/: has_operator.hpp  is_variant.hpp  operators_impl.hpp  polymorphic_variant_impl.hpp  storage_offset.hpp  storage_ptr.hpp  variadic_parameter_helper.hpp  variant_converter.hpp
tests/: CMakeLists.txt  test.cpp  test_definitions.hpp
tests/free_functions/: CMakeLists.txt  free_functions_test.cpp
tests/main/: CMakeLists.txt  main_test.cpp
tests/operators/: CMakeLists.txt  operator_classes.hpp  operators_test.cpp
